--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <a href="interests.html">More on my hobbies</a>
     <hr>
     <h2>For more infornation</h2>
-    <form action="mailto:isabellalynn426@gmail.com">
+    <form action="mailto:isabellalynn426@gmail.com" enctype="multipart/form-data">
         <label for="username">Username</label>
         <input type="text" name="username" id="username">
 
